[package]
name = "json_enum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/test.rs"

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
jq-rs = { version = "0.4", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proc-macro2 = "1"
anyhow = "1"
